--- a/src/routes/styles.css
+++ b/src/routes/styles.css
@@ -1,7 +1,4 @@
-@import '../../node_modules/@fontsource/fira-mono';
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import '@fontsource/fira-mono';
 
 :root {
   --font-body: Arial, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans',
